# otrecorder

./: Cargo.toml
src/: api.rs  config.rs  export.rs  import.rs  main.rs  mqtt.rs  owntracks.rs  storage.rs
web/: index.html  package-lock.json  package.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.ts
web/src/: App.tsx  api.ts  index.css  main.tsx  types.ts  vite-env.d.ts
web/src/components/: Filters.tsx  Map.tsx
