[package]
name = "owntracks-recorder"
version = "0.2.0"
edition = "2021"

[dependencies]
anyhow = "1"
arrow-array = "53"
arrow-schema = "53"
axum = { version = "0.7", features = ["macros"] }
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.5", features = ["derive", "env"] }
dirs = "5"
parquet = { version = "53", features = ["arrow"] }
r2d2 = "0.8"
r2d2_sqlite = "0.24"
rumqttc = { version = "0.24", features = ["use-rustls"] }
rusqlite = { version = "0.31", features = ["bundled"] }
rustls = "0.22"
rustls-native-certs = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "sync", "time", "net"] }
toml = "0.8"
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "cors", "fs"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[profile.release]
lto = "thin"
strip = true
